snapshots/syntax/library/statements/print/print_with_semicolon.snap
---
source: src/syntax/library/statements/file_operations/print.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: PrintStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"Name: \""
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: userName
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\" Age: \""
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: userAge
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
