snapshots/syntax/library/statements/print/print_with_spc_and_tab.snap
---
source: src/syntax/library/statements/print.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: PrintStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Spc
                - kind: LeftParenthesis
                  text: (
                - kind: IntegerLiteral
                  text: "10"
                - kind: RightParenthesis
                  text: )
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"Text\""
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Tab
                - kind: LeftParenthesis
                  text: (
                - kind: IntegerLiteral
                  text: "20"
                - kind: RightParenthesis
                  text: )
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"More\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
